@@ -17,10 +17,11 @@ import static org.jdbi.v3.core.transaction.TransactionIsolationLevel.READ_COMMIT
 import tech.pegasys.web3signer.slashingprotection.dao.Validator;
 import tech.pegasys.web3signer.slashingprotection.dao.ValidatorsDao;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.locks.ReadWriteLock;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 import com.google.common.collect.BiMap;
 import com.google.common.collect.HashBiMap;
@@ -32,6 +33,7 @@ import org.jdbi.v3.core.Jdbi;
 public class RegisteredValidators {
   private static final Logger LOG = LogManager.getLogger();
   private final BiMap<Bytes, Integer> registeredValidators;
+  private final ReadWriteLock validatorsLock = new ReentrantReadWriteLock();
   private final Jdbi jdbi;
   private final ValidatorsDao validatorsDao;
 
@@ -49,15 +51,30 @@ public class RegisteredValidators {
   }
 
   public Set<Integer> validatorIds() {
-    return Collections.unmodifiableSet(registeredValidators.values());
+    validatorsLock.readLock().lock();
+    try {
+      return Set.copyOf(registeredValidators.values());
+    } finally {
+      validatorsLock.readLock().unlock();
+    }
   }
 
   public Optional<Bytes> getPublicKeyForValidatorId(final int validatorId) {
-    return Optional.ofNullable(registeredValidators.inverse().get(validatorId));
+    validatorsLock.readLock().lock();
+    try {
+      return Optional.ofNullable(registeredValidators.inverse().get(validatorId));
+    } finally {
+      validatorsLock.readLock().unlock();
+    }
   }
 
   public Optional<Integer> getValidatorIdForPublicKey(final Bytes publicKey) {
-    return Optional.ofNullable(registeredValidators.get(publicKey));
+    validatorsLock.readLock().lock();
+    try {
+      return Optional.ofNullable(registeredValidators.get(publicKey));
+    } finally {
+      validatorsLock.readLock().unlock();
+    }
   }
 
   public int mustGetValidatorIdForPublicKey(final Bytes publicKey) {
@@ -78,7 +95,12 @@ public class RegisteredValidators {
 
     LOG.info("Validators registered successfully in database:{}", registeredValidatorsList.size());
 
-    registeredValidatorsList.forEach(
-        validator -> registeredValidators.put(validator.getPublicKey(), validator.getId()));
+    validatorsLock.writeLock().lock();
+    try {
+      registeredValidatorsList.forEach(
+          validator -> registeredValidators.put(validator.getPublicKey(), validator.getId()));
+    } finally {
+      validatorsLock.writeLock().unlock();
+    }
   }
 }
